{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 56,
  "lineage": "a15a8c82-593b-14d2-13b3-5201dfe96b5c",
  "resources": [
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg-02c996aec871c39bf",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:757282205153:security-group/sg-02c996aec871c39bf",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c996aec871c39bf",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "757282205153",
            "region": "eu-west-1",
            "revoke_rules_on_delete": null,
            "tags": {
              "Country": "Espana",
              "Name": "SG-ONE-Channel-Hub-Default",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "SG-ONE-Channel-Hub-Default",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ee2e561b25ea156"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "757282205153",
            "id": "sg-02c996aec871c39bf",
            "region": "eu-west-1"
          }
        },
        {
          "index_key": "sg-05b3b1d5e4904d474",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:757282205153:security-group/sg-05b3b1d5e4904d474",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b3b1d5e4904d474",
            "ingress": [],
            "name": "SG-ONE-Channel-Hub-Lambdas-Default",
            "name_prefix": "",
            "owner_id": "757282205153",
            "region": "eu-west-1",
            "revoke_rules_on_delete": null,
            "tags": {
              "Country": "Espana",
              "Name": "SG-ONE-Channel-Hub-Lambdas-Default",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "SG-ONE-Channel-Hub-Lambdas-Default",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ee2e561b25ea156"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "757282205153",
            "id": "sg-05b3b1d5e4904d474",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "igw-euw1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:757282205153:internet-gateway/igw-0ba93071c90f2ab74",
            "id": "igw-0ba93071c90f2ab74",
            "owner_id": "757282205153",
            "region": "eu-west-1",
            "tags": {
              "Country": "Espana",
              "Name": "IGW-ONE-Channel-Hub",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "IGW-ONE-Channel-Hub",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "vpc_id": "vpc-05ee2e561b25ea156"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat-eu-west-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07177f5d6e45cf6ca",
            "association_id": "eipassoc-0541c1c3135d8ef5b",
            "connectivity_type": "public",
            "id": "nat-0e98eb0a5fe2e79b2",
            "network_interface_id": "eni-03960f86aba132e38",
            "private_ip": "10.133.44.45",
            "public_ip": "54.217.192.193",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0313035df85fcd076",
            "tags": {
              "Country": "Espana",
              "Name": "NAT-ONE-Channel-Hub-1",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "NAT-ONE-Channel-Hub-1",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rtb-private1-euw1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:757282205153:route-table/rtb-0f58645b3b11b7017",
            "id": "rtb-0f58645b3b11b7017",
            "owner_id": "757282205153",
            "propagating_vgws": [
              "vgw-005a59c6c86f574a9"
            ],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e98eb0a5fe2e79b2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.177.179.36/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.102.100.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "vgw-005a59c6c86f574a9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.102.180.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "vgw-005a59c6c86f574a9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.15.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.57.154.243/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Country": "Espana",
              "Name": "RT-Private1",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "RT-Private1",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ee2e561b25ea156"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "757282205153",
            "id": "rtb-0f58645b3b11b7017",
            "region": "eu-west-1"
          }
        },
        {
          "index_key": "rtb-private2-euw1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:757282205153:route-table/rtb-0ca90f29bacf1e18e",
            "id": "rtb-0ca90f29bacf1e18e",
            "owner_id": "757282205153",
            "propagating_vgws": [
              "vgw-005a59c6c86f574a9"
            ],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.177.179.36/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.102.100.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "vgw-005a59c6c86f574a9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.102.180.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "vgw-005a59c6c86f574a9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.15.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.57.154.243/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.57.154.56/32",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f6739e2525074a0a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Country": "Espana",
              "Name": "RT-Private2",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "RT-Private2",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ee2e561b25ea156"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "757282205153",
            "id": "rtb-0ca90f29bacf1e18e",
            "region": "eu-west-1"
          }
        },
        {
          "index_key": "rtb-public1-euw1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:757282205153:route-table/rtb-0c4f6882d06fd1263",
            "id": "rtb-0c4f6882d06fd1263",
            "owner_id": "757282205153",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba93071c90f2ab74",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Country": "Espana",
              "Name": "RT-Public1",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "RT-Public1",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ee2e561b25ea156"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "757282205153",
            "id": "rtb-0c4f6882d06fd1263",
            "region": "eu-west-1"
          }
        },
        {
          "index_key": "rtb-public2-euw1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:757282205153:route-table/rtb-056eb31a690fb5267",
            "id": "rtb-056eb31a690fb5267",
            "owner_id": "757282205153",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba93071c90f2ab74",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Country": "Espana",
              "Name": "RT-Public2",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "RT-Public2",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ee2e561b25ea156"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "757282205153",
            "id": "rtb-056eb31a690fb5267",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-private1-euw1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:757282205153:subnet/subnet-058c52100db85a8ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.133.44.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058c52100db85a8ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757282205153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Country": "Espana",
              "Name": "10.133.44.0/28-Private1-eu-west-1a",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "10.133.44.0/28-Private1-eu-west-1a",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "vpc_id": "vpc-05ee2e561b25ea156"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "757282205153",
            "id": "subnet-058c52100db85a8ba",
            "region": "eu-west-1"
          }
        },
        {
          "index_key": "subnet-private2-euw1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:757282205153:subnet/subnet-0675dae736ca47137",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.133.44.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0675dae736ca47137",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757282205153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Country": "Espana",
              "Name": "10.133.44.16/28-Private2-eu-west-1b",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "10.133.44.16/28-Private2-eu-west-1b",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "vpc_id": "vpc-05ee2e561b25ea156"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "757282205153",
            "id": "subnet-0675dae736ca47137",
            "region": "eu-west-1"
          }
        },
        {
          "index_key": "subnet-public1-euw1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:757282205153:subnet/subnet-0313035df85fcd076",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.133.44.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0313035df85fcd076",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757282205153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Country": "Espana",
              "Name": "10.133.44.32/28-Public1-eu-west-1a",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "10.133.44.32/28-Public1-eu-west-1a",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "vpc_id": "vpc-05ee2e561b25ea156"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "757282205153",
            "id": "subnet-0313035df85fcd076",
            "region": "eu-west-1"
          }
        },
        {
          "index_key": "subnet-public2-euw1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:757282205153:subnet/subnet-0fc626adc3633defd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.133.44.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc626adc3633defd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757282205153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Country": "Espana",
              "Name": "10.133.44.48/28-Public2-eu-west-1b",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "10.133.44.48/28-Public2-eu-west-1b",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "vpc_id": "vpc-05ee2e561b25ea156"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "757282205153",
            "id": "subnet-0fc626adc3633defd",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default-vpc-use1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default-vpc-use1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:757282205153:vpc/vpc-05ee2e561b25ea156",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.133.44.0/26",
            "default_network_acl_id": "acl-09fbb13c4e9484a67",
            "default_route_table_id": "rtb-0ca90f29bacf1e18e",
            "default_security_group_id": "sg-02c996aec871c39bf",
            "dhcp_options_id": "dopt-006f9a106dbdec7cb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05ee2e561b25ea156",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca90f29bacf1e18e",
            "owner_id": "757282205153",
            "region": "eu-west-1",
            "tags": {
              "Country": "Espana",
              "Name": "10.133.44.0/26-VPC-ONE-Channel-Hub",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            },
            "tags_all": {
              "Country": "Espana",
              "Name": "10.133.44.0/26-VPC-ONE-Channel-Hub",
              "Platform": "Terraform",
              "Project": "ONE Channel Hub"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}